first iteration after feedback

--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -33,12 +33,12 @@ it:
   continue: continua
   home:
     title: Pat Imparo Con I Genitori
-    subtitle: Screening per identificare le famiglie a rischio
+    subtitle: Sreening per identificare le famiglie con diversi fattori di stress
     questionnaire: Questionario
     about_us: Chi siamo
   about_us:
     head_title: Chi siamo
-    title: Chi siamo - PAT imparo con i genitori
+    title: PARENT AS TEACHERS - PAT IMPARO CON I GENITORI
     more_information: Maggiori informazioni
   quicklinks:
    all_contacts: Tutti contatti
@@ -60,11 +60,32 @@ it:
     sure: Sicuro
     very_sure: Molto sicuro
   addresses:
-    head_title: Contatti
+    contatti: Servizi di sostegno per tutti
+    head_title: Servizi di sostegno per tutti
     all_contacts: Tutti contatti
-    medium_risk: Medio rischio
-    medium_risk_title: Medio rischio
-    medium_risk_description: Abbiamo identificato un rischio medio-alto. Ulteriore assistenza è necessaria nel seguente caso. Di seguito sono riportati alcuni indirizzi che potete contattare.
-    high_risk: Alto rischio
-    high_risk_title: Alto rischio
-    high_risk_description: Abbiamo identificato un rischio elevato. Nel seguente caso è indispensabile un ulteriore supporto. Qui sotto troverete alcuni indirizzi da contattare.
+    medium_risk: Sostegno oltre ai servizi offerti a tutti
+    medium_risk_title: Sostegno oltre ai servizi offerti a tutti
+    medium_risk_description: >-
+      Secondo lo screening, questa famiglia può usufruire come tutte le
+      famiglie dei sostegni di base previsti per tutti, ma è auspicabile
+      ampliare la presa a carico con altri servizi di sostegno e aiuto.
+      L’attivazione del progetto PAT, prevede una visita domiciliare per
+      conoscere la famiglia e presentare il progetto. È  possibile effettuare un
+      paio di visite di prova così che la famiglia possa capire di cosa si
+      tratta. Insieme si valuterà e deciderà se proseguire con il progetto
+      PAT oppure coinvolgere altri servizi. Da parte del PAT ci sarà sempre un
+      feedback a chi ha segnalato la famiglia.
+    high_risk: Sostegno consigliato, oltre ai servizi offerti a tutti
+    high_risk_title: Sostegno consigliato, oltre ai servizi offerti a tutti
+    high_risk_description: >-
+      Come per tutte le famiglie sono sempre a disposizione tutti i servizi
+      di base. La famiglia in questione presenta però più indicatori di stress,
+      che potrebbero compromettere uno sviluppo sano del loro bambino . Il
+      progetto PAT può essere di sostegno alla famiglia, collaborando con altri
+      servizi. Se la famiglia è d’accordo, andiamo al loro domicilio a spiegare
+      il progetto PAT. Possiamo fare delle visite di prova, per capire entrambi,
+      se questo progetto possa andare bene per loro e/o se ci vogliono aiuti
+      diversi. Da parte del PAT ci sarà sempre un feedback a chi ha segnalato la
+      famiglia Abbiamo identificato un rischio elevato. Nel seguente caso è
+      indispensabile un ulteriore supporto. Qui sotto troverete alcuni indirizzi
+      da contattare.
