--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -37,7 +37,7 @@ it:
   continue: continua
   home:
     title: Pat Imparo Con I Genitori
-    subtitle: Sreening per identificare le famiglie con diversi fattori di stress
+    subtitle: Screening per identificare le famiglie con diversi fattori di stress
     questionnaire: Questionario
     about_us: Chi siamo
   about_us:
