update webpacker and fix typo

--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -75,5 +75,5 @@ it:
     all_contacts: Tutti contatti
     medium_risk: Prevenzione secondaria
     medium_risk_title: Prevenzione secondaria
-    high_risk: Prevenzione terziara
-    high_risk_title: Prevenzione terziara
+    high_risk: Prevenzione terziaria
+    high_risk_title: Prevenzione terziaria
