Changes: - Based on E-Mail Doc from the 25th of October by Regula Eppisser

--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -6,8 +6,8 @@ it:
   home:
     title: Pat Imparo Con I Genitori
     subtitle_html: |
-      lo screening permette di identificare le famiglie con diversi fattori di stress e indicare i sostegni adatti alle loro esigenze.<br><br>
-      cliccare su "questionario" per procedere con lo screening.
+      Lo screening permette di identificare le famiglie con diversi fattori di stress e indicare i sostegni adatti alle loro esigenze.<br><br>
+      Cliccare su "questionario" per procedere con lo screening.
     questionnaire: Questionario
     about_us: Chi siamo
   about_us:
