--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -63,7 +63,8 @@ de:
     ovk: OVK
     ticino: Tessin
     head_title: Primärprävention
-    all_contacts: Primärprävention
+    more_organizations: Weitere Organisationen
+    low_risk: Primärprävention
     medium_risk: Sekundärprävention
     medium_risk_title: Sekundärprävention
     high_risk: Tertiärprävention
@@ -76,13 +77,12 @@ de:
     go_to_primary_prevention: siehe Primärprävention
     go_to_secondary_prevention: siehe Sekundärprävention
     ovk:
-      address_title:  Familienbegleitung PAT
+      address_title: Familienbegleitung PAT
       primary:
-        title: Primärprävention
-        subtitle_1_html: |
-          Entsprechend dem Screening-Score dieser Familie wird eine Primärprävention empfohlen. Bitte wenden Sie sich je nach Wohnort an die Mütter- und Väterberatung des Ostschweizer Vereins für das Kind OVK (<a href="https://www.ovk.ch/beratung/beratungsstellen" target="_blank"><i class="fas fa-link"></i>https://www.ovk.ch/beratung/beratungsstellen</a>) oder an die Mütter- und Väterberatung Untertoggenburg, Wil, Gossau (<a href="https://www.mutter-vater-beratung.ch/beratungsorte" target="_blank"><i class="fas fa-link"></i>https://www.mutter-vater-beratung.ch/beratungsorte</a>).
-        subtitle_2_html: |
-          Sollte sich die Situation ändern, kann das PAT auch zu einem späteren Zeitpunkt, in den ersten 9 Lebensmonaten des Kindes, aktiviert werden (%{link}).
+        title: Präventionsstufen
+        paragraph_1_html: |
+          <p>Entsprechend dem Screening-Score dieser Familie wird eine Primärprävention empfohlen. Bitte wenden Sie sich je nach Wohnort an die Mütter- und Väterberatung des Ostschweizer Vereins für das Kind OVK (<a href="https://www.ovk.ch/beratung/beratungsstellen" target="_blank"><i class="fas fa-link"></i>https://www.ovk.ch/beratung/beratungsstellen</a>) oder an die Mütter- und Väterberatung Untertoggenburg, Wil, Gossau (<a href="https://www.mutter-vater-beratung.ch/beratungsorte" target="_blank"><i class="fas fa-link"></i>https://www.mutter-vater-beratung.ch/beratungsorte</a>).</p>
+          <p>Sollte sich die Situation ändern, kann das PAT auch zu einem späteren Zeitpunkt, in den ersten 9 Lebensmonaten des Kindes, aktiviert werden (%{link}).</p>
       secondary:
         paragraph_1_html: |
           <p>Gemäß dem für diese Familie durchgeführten Screening-Score wird nebst der Primärprävention (Mütter- und Väterberatung) auch eine Sekundärprävention empfohlen.</p>
@@ -98,13 +98,12 @@ de:
           <p>Eine PAT-Elterntrainerin wird dann mit der Familie Kontakt aufnehmen und in zwei bis drei Gesprächen zusammen mit den Eltern eine Bedarfseinschätzung vornehmen.</p>
     pat_ti:
       primary:
-        title: Primärprävention
-        subtitle_1_html: |
-          Entsprechend dem Screening-Score dieser Familie wird eine Primärprävention empfohlen. Eltern können sich über die Website ticinoperbambini.ch an eine Hebamme oder einen anderen Dienst wenden.
-        subtitle_2_html: |
-          Sollte sich die Situation ändern, kann das PAT auch zu einem späteren Zeitpunkt, in den ersten 8 Lebensmonaten des Kindes, aktiviert werden (%{link}).
+        title: Präventionsstufen
+        paragraph_1_html: |
+          <p>Entsprechend dem Screening-Score dieser Familie wird eine Primärprävention empfohlen. Eltern können sich über die Website ticinoperbambini.ch an eine Hebamme oder einen anderen Dienst wenden.</p>
+          <p>Sollte sich die Situation ändern, kann das PAT auch zu einem späteren Zeitpunkt, in den ersten 8 Lebensmonaten des Kindes, aktiviert werden (%{link}).</p>
         description_1_html: |
-          <p>Ein Verzeichnis über Angebote und Aktivitäten im Tessin für Familien und Kinder.</p>
+          <p>Ein Verzeichnis über Angebote und Aktivitäten im Tessin für Familien und Kinder</p>
       secondary:
         paragraph_1_html: |
           <p>Gemäß dem für diese Familie durchgeführten Screening-Score wird nebst der Primärprävention (%{link}) auch eine Sekundärprävention empfohlen.</p>
