add missing links

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -100,7 +100,7 @@ de:
       primary:
         title: Präventionsstufen
         paragraph_1_html: |
-          <p>Entsprechend dem Screening-Score dieser Familie wird eine Primärprävention empfohlen. Eltern können sich über die Website ticinoperbambini.ch an eine Hebamme oder einen anderen Dienst wenden.</p>
+          <p>Entsprechend dem Screening-Score dieser Familie wird eine Primärprävention empfohlen. Eltern können sich über die Website Ticinoperbambini.ch an eine Hebamme oder einen anderen Dienst wenden.</p>
           <p>Sollte sich die Situation ändern, kann das PAT auch zu einem späteren Zeitpunkt, in den ersten 8 Lebensmonaten des Kindes, aktiviert werden (%{link}).</p>
         description_1_html: |
           <p>Ein Verzeichnis über Angebote und Aktivitäten im Tessin für Familien und Kinder</p>
