--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -100,7 +100,7 @@ en:
       primary:
         title: Levels of prevention
         paragraph_1_html: |
-          <p>According to the screening score of this family, primary prevention is recommended. Parents can contact a midwife or other services through ticinoperbambini.ch.</p>
+          <p>According to the screening score of this family, primary prevention is recommended. Parents can contact a midwife or other services through Ticinoperbambini.ch.</p>
           <p>If the situation changes, the PAT can also be activated at a later stage, in the first 8 months of the child's life (%{link}).</p>
         description_1_html: |
           <p>A guide with offers and activities in Ticino for families and children</p>
