--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -5,9 +5,14 @@ it:
   continue: Continua
   home:
     title: Pat Imparo Con I Genitori
-    subtitle_html: |
-      Lo screening permette di identificare le famiglie con diversi fattori di stress e indicare i sostegni adatti alle loro esigenze.<br><br>
-      Cliccare su "questionario" per procedere con lo screening.
+    ovk:
+      subtitle_html: |
+        Lo screening permette alle famiglie e ai referenti di trovare l'offerta giusta nel <a target="_blank" href="https://www.ovk.ch/"><i class="fas fa-link"></i>Ostschweizer Verein für das Kind</a>.
+        Il questionario deve essere compilato prima che il bambino compia 12 mesi.
+    pat_ti:
+      subtitle_html: |
+        Lo screening permette di identificare le famiglie con diversi fattori di stress e indicare i sostegni adatti alle loro esigenze.<br><br>
+        Cliccare su "questionario" per procedere con lo screening.
     questionnaire: Questionario
     about_us: Chi siamo
   about_us:
