new ovk translations

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -7,7 +7,7 @@ en:
     title: PAT - Parents as Teachers
     ovk:
       subtitle_html: |
-        This screening allows families and referrers to find suitable services from the <a target="_blank" href="https://www.ovk.ch/"><i class="fas fa-link"></i>Ostschweizer Verein für das Kind</a>.
+        This screening allows families and referrers to find suitable services from the <a target="_blank" href="https://www.ovk.ch/"><i class="fas fa-link"></i>„Ostschweizer Verein für das Kind“</a>.
         Please note that the questionnaire should be completed before the child is 12 months old.
     pat_ti:
       subtitle_html: |
