--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -7,8 +7,8 @@ it:
     title: Pat Imparo Con I Genitori
     ovk:
       subtitle_html: |
-        Lo screening permette alle famiglie e ai referenti di trovare l'offerta giusta nel <a target="_blank" href="https://www.ovk.ch/"><i class="fas fa-link"></i>Ostschweizer Verein für das Kind</a>.
-        Il questionario deve essere compilato prima che il bambino compia 12 mesi.
+        Lo screening permette alle famiglie ed ai professionisti di trovare l'offerta giusta nel <a target="_blank" href="https://www.ovk.ch/"><i class="fas fa-link"></i>„Ostschweizer Verein für das Kind“</a>.
+        Il questionario deve essere compilato prima che il bambino compie 12 mesi.
     pat_ti:
       subtitle_html: |
         Lo screening permette di identificare le famiglie con diversi fattori di stress e indicare i sostegni adatti alle loro esigenze.<br><br>
