--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -7,8 +7,7 @@ it:
     title: Pat Imparo Con I Genitori
     ovk:
       subtitle_html: |
-        Lo screening permette alle famiglie ed ai professionisti di trovare l'offerta giusta nel <a target="_blank" href="https://www.ovk.ch/"><i class="fas fa-link"></i>„Ostschweizer Verein für das Kind“</a>.
-        Il questionario deve essere compilato prima che il bambino compie 12 mesi.
+        Valutazione dei possibili fattori di stress e di protezione durante la gravidanza fino a 12 mesi dopo la nascita.
     pat_ti:
       subtitle_html: |
         Lo screening permette di identificare le famiglie con diversi fattori di stress e indicare i sostegni adatti alle loro esigenze.<br><br>
@@ -21,7 +20,7 @@ it:
     more_information: Maggiori informazioni
     paragraph_1_html: |
       <p>Parents as Teachers promuove lo sviluppo precoce, l'apprendimento e la salute dei bambini nella prima infanzia sostenendo e coinvolgendo i genitori e le persone di riferimento.</p>
-      <p>I genitori influenzano in maniera importante lo sviluppo e l'apprendimento del proprio bambino. Con l'aiuto del Progetto PAT – Imparo con i genitori viene offerta alle famiglie l'opportunità di ricevere informazioni e sostegno necessari per svolgere al meglio il proprio ruolo genitoriale.</p>
+      <p>I genitori influenzano in maniera importante lo sviluppo e l'apprendimento del proprio bambino. Con l'aiuto del Progetto PAT - Imparo con i genitori viene offerta alle famiglie l'opportunità di ricevere informazioni e sostegno necessari per svolgere al meglio il proprio ruolo genitoriale.</p>
     subtitle_1: A chi si rivolge il progetto
     paragraph_2_html: |
       <p>Si rivolge a donne in gravidanza e famiglie con bambini tra 0 e 8 mesi al momento della segnalazione, con possibili/eventuali difficoltà personali, familiari, sociali o materiali.</p>
@@ -76,7 +75,7 @@ it:
     high_risk: Prevenzione terziaria
     high_risk_title: Prevenzione terziaria
   screening:
-    title: Screening
+    title: Online Screening
     subtitle_stress: "Fattori di stress per il bambino/a e la sua famiglia"
     subtitle_protectiv: Fattori protettivi
   prevention:
@@ -88,7 +87,7 @@ it:
         title: Livelli di prevenzione
         paragraph_1_html: |
           <p>In base al punteggio dello screening per questa famiglia, si consiglia la prevenzione primaria. A seconda del luogo di residenza, contattate il consultorio genitori e bambino dell'Ostschweizer Verein für das Kind OVK (<a href="https://www.ovk.ch/beratung/beratungsstellen" target="_blank"><i class="fas fa-link"></i>https://www.ovk.ch/beratung/beratungsstellen</a>) o il consultorio genitori e bambino Untertoggenburg, Wil, Gossau (<a href="https://www.mutter-vater-beratung.ch/beratungsorte" target="_blank"><i class="fas fa-link"></i>https://www.mutter-vater-beratung.ch/beratungsorte</a>).</p>
-          <p>Se la situazione dovesse cambiare, il progetto PAT può essere attivato anche in un secondo momento, nei primi 9 mesi di vita del bambino (%{link}).</p>
+          <p>Se la situazione dovesse cambiare, il progetto PAT può essere attivato anche in un secondo momento, nei primi 12 mesi di vita del bambino (%{link}).</p>
       secondary:
         paragraph_1_html: |
           <p>In base al punteggio dello screening effettuato per questa famiglia, si consiglia la prevenzione secondaria oltre alla prevenzione primaria (consultorio genitori e bambino).</p>
